--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,4 +7,4 @@ Depends: R (>= 3.1.1)
 License: What license is it under?
 LazyData: true
 Suggests: testthat
-Imports: data.table, reshape2, ggplot2
+Imports: data.table, reshape2, ggplot2, deSolve
