--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,9 @@ Package: tbODE
 Title: ODE Models for Tuberculosis
 Version: 0.0.0.9000
 Authors@R: person("Carl", "Pearson", , "blank101@gmail.com", role = c("aut", "cre"))
-Description: This package provides parametrized ODE models of tuberculosis,
-to be fit to data of population-level case reports.
+Description:
+ This package provides parametrized ODE models of tuberculosis,
+ to be fit to data of population-level case reports.
 Depends: R (>= 3.1.1)
 License: MIT
 LazyData: true
