--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(TBmodel)
 export(oderun)
 export(plot_run)
 import(data.table)
+importFrom(deSolve,lsoda)
 importFrom(deSolve,ode)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_line)
